--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@
 }
 
 #root {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 html,
